implemented test and makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 set(GXX_COVERAGE_COMPILE_FLAGS "-g -ansi -Wall -Wextra -pthread -lm -O0")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GXX_COVERAGE_COMPILE_FLAGS}" )
 
-add_executable(distributed_systems src/main.cpp)
+add_executable(main src/main.cpp)
